# rust_widgets

./: .gitignore  Cargo.toml
src/: gui.rs  main.rs  widgets.rs
src/widgets/: cpu.rs  disc.rs  memory.rs  weather.rs
