[package]
name = "rust_widgets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.29"
eframe = "0.29"
egui_plot = "0.29"
sysinfo = "0.32"
chrono = "0.4"
reqwest = {version = "0.12", features = ["blocking"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
winapi = "0.3"
raw-window-handle = "0.6"
winit = "0.30"